--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "web:start": "react-app-rewired start",
+    "web:build": "react-app-rewired build"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
@@ -15,24 +17,41 @@
     "@react-navigation/stack": "^5.0.3",
     "moment": "^2.24.0",
     "react": "16.9.0",
+    "react-dom": "^17.0.1",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.2",
-    "react-native-screens": "^2.0.0-beta.2"
+    "react-native-screens": "^2.0.0-beta.2",
+    "react-native-web": "^0.15.0",
+    "react-scripts": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
+    "babel-plugin-react-native-web": "^0.15.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
+    "react-app-rewired": "^2.1.8",
     "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
